// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallZigZagDeflect> <BallZigZagDeflect> Mount: enzyme.mount 1`] = `
.css-1q13ncp,
[data-css-1q13ncp] {
  position: relative;
  transform: translate(-15px, -15px);
  -webkit-transform: translate(-15px, -15px);
}

.css-1q13ncp > div,
[data-css-1q13ncp] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  left: -7px;
  margin-left: 15px;
  position: absolute;
  top: 4px;
  -webkit-animation-fill-mode: both;
}

.css-1q13ncp > div:first-child,
[data-css-1q13ncp] > div:first-child {
  animation: animation_vvdr81 1.5s 0s infinite linear;
  -webkit-animation: animation_vvdr81 1.5s 0s infinite linear;
}

.css-1q13ncp > div:last-child,
[data-css-1q13ncp] > div:last-child {
  animation: animation_135dxz0 1.5s 0s infinite linear;
  -webkit-animation: animation_135dxz0 1.5s 0s infinite linear;
}

<BallZigZagDeflect
  loading={true}
>
  <div
    data-css-1q13ncp=""
  >
    <div />
    <div />
  </div>
</BallZigZagDeflect>
`;

exports[`<BallZigZagDeflect> <BallZigZagDeflect> Render: enzyme.render 1`] = `
.css-1q13ncp,
[data-css-1q13ncp] {
  position: relative;
  transform: translate(-15px, -15px);
  -webkit-transform: translate(-15px, -15px);
}

.css-1q13ncp > div,
[data-css-1q13ncp] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  left: -7px;
  margin-left: 15px;
  position: absolute;
  top: 4px;
  -webkit-animation-fill-mode: both;
}

.css-1q13ncp > div:first-child,
[data-css-1q13ncp] > div:first-child {
  animation: animation_vvdr81 1.5s 0s infinite linear;
  -webkit-animation: animation_vvdr81 1.5s 0s infinite linear;
}

.css-1q13ncp > div:last-child,
[data-css-1q13ncp] > div:last-child {
  animation: animation_135dxz0 1.5s 0s infinite linear;
  -webkit-animation: animation_135dxz0 1.5s 0s infinite linear;
}

<div
  data-css-1q13ncp=""
>
  <div />
  <div />
</div>
`;

exports[`<BallZigZagDeflect> <BallZigZagDeflect> Shallow: enzyme.shallow 1`] = `
.css-1q13ncp,
[data-css-1q13ncp] {
  position: relative;
  transform: translate(-15px, -15px);
  -webkit-transform: translate(-15px, -15px);
}

.css-1q13ncp > div,
[data-css-1q13ncp] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  left: -7px;
  margin-left: 15px;
  position: absolute;
  top: 4px;
  -webkit-animation-fill-mode: both;
}

.css-1q13ncp > div:first-child,
[data-css-1q13ncp] > div:first-child {
  animation: animation_vvdr81 1.5s 0s infinite linear;
  -webkit-animation: animation_vvdr81 1.5s 0s infinite linear;
}

.css-1q13ncp > div:last-child,
[data-css-1q13ncp] > div:last-child {
  animation: animation_135dxz0 1.5s 0s infinite linear;
  -webkit-animation: animation_135dxz0 1.5s 0s infinite linear;
}

<div
  data-css-1q13ncp=""
>
  <div />
  <div />
</div>
`;
